tests/error/divide_by_zero.gw
// [contains] division by zero
[ #(0.0, 0/0) ];
